[package]
name = "rustripper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking", "cookies", "stream"] }
tokio = { version = "1", features = ["full"] }
select = { version = "0.5.0" }
progressing = "3.0.2"
image = "0.23.14"
linya = "0.2.1"
http = "0.2.5"
bytes = "1"